k8s/base/adserver/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: adserver
  namespace: adtech
  labels:
    app: adserver
spec:
  selector:
    app: adserver
  ports:
    - name: http
      port: 8085
      targetPort: 8085
